# Iluvatar-AI-Notebook

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  THIRDPARTYNOTICES  app.py  issues.jsonl  pyproject.toml  pytest.ini  requirements.txt  test_binary_module.py  test_binary_search.py  test_blob_module.py  test_chromium_version.py  test_chunk_module.js  test_console.py  test_fetch_state.py  test_full_ui.py  test_gpu_state.py  test_new_function.py  test_nocache.py  test_pageerror_detail.py  test_route_state.py  test_state_fetch.py  test_ui.py  test_ui2.py  test_ui3.py  test_ui4.py
.trae/documents/: localize-all-cdn.md
.trae/scripts/: perf_test.py
Iluvatar-AI-Notebook-main/: .gitignore  README.md
Iluvatar-AI-Notebook-main/static/: index.html  style.css
core/: __init__.py  errors.py  gpu.py  iluvatar_provisioner.py  kernel.py  utils.py
core/routes/: __init__.py  ai_routes.py  file_routes.py  gpu_routes.py  kernel_routes.py  lint_routes.py  static_routes.py
docs/adr/: 001-reuse-jupyter-kernel.md
docs/design/: kernel-refactoring-design.md
docs/plan/: dependency-management.md  frontend-adaptation-plan.md  testing-and-rollout.md
docs/roadmap/: migration-roadmap.md
e2e/: p2-streaming.spec.mjs  p3-completion-inspect.spec.mjs
kernels/iluvatar_python/: kernel.json
project/Iluvatar-AI-Notebook-main/: app.py
static/: app.js  index.html  poc_test.html  style.css
static/js/: api.js  completion.js  inspect.js  kernel-indicator.js  main.js  output-renderer.js  renderer.js  sse-client.js  state.js
tests/: test_app.py
tests/integration/: test_iluvatar_provisioner.py  (+2 more)
(+15 files in other folders)
